hphp/test/zend/bad/ext/spl/tests/SplFileInfo_getInode_error.php
<?php

//file
$fileInfo = new SplFileInfo('not_existing');
var_dump($fileInfo->getInode());
?>
